--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="width=768, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Coffee Shop</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -12,7 +12,7 @@
 <body>
         <div class="container-fluid fixed-top menubar">
                 <div class="row">
-                    <div class="col-md-5 d-flex flex-row">
+                    <div class="col-md-5 d-flex flex-row logo">
                             <img src="/images/logo.png">
                     </div>
                     <div class="col-md-7 d-flex flex-row-reverse headericon"><a href="#ProductList"><i class="fa fa-shopping-cart fa-2x"></i></a>
@@ -24,97 +24,7 @@
                 <div class="row cartItems">
                         <div class="col-md-8">
                             <div id="productCards" class="row justify-content-center">
-                                <!-- <div class="card">
-                                        <img src="https://via.placeholder.com/150" height="120px" width="150px" class="card-img-top" alt="...">
-                                        <div class="card-body">
-                                        <h5 class="card-title">Product</h5>
-                                        <p class="card-text">Description of Product.</p>
-                                        <h6 class="card-title">$5</h6>
-                                        <a href="#" class="btn-sm btn-primary">Add to Cart</a>
-                                        </div>
-                                        </div>
-                                <div class="card">
-                                        <img src="https://via.placeholder.com/150" height="120px" width="150px" class="card-img-top" alt="...">
-                                        <div class="card-body">
-                                        <h5 class="card-title">Product</h5>
-                                        <p class="card-text">Description of Product.</p>
-                                        <h6 class="card-title">$5</h6>
-                                        <a href="#" class="btn-sm btn-primary">Add to Cart</a>
-                                        </div>
-                                        </div>
-                                <div class="card">
-                                        <img src="https://via.placeholder.com/150" height="120px" width="150px" class="card-img-top" alt="...">
-                                        <div class="card-body">
-                                        <h5 class="card-title">Product</h5>
-                                        <p class="card-text">Description of Product.</p>
-                                        <h6 class="card-title">$5</h6>
-                                        <a href="#" class="btn-sm btn-primary">Add to Cart</a>
-                                        </div>
-                                        </div>
-                                <div class="card">
-                                        <img src="https://via.placeholder.com/150" height="120px" width="150px" class="card-img-top" alt="...">
-                                        <div class="card-body">
-                                        <h5 class="card-title">Product</h5>
-                                        <p class="card-text">Description of Product.</p>
-                                        <h6 class="card-title">$5</h6>
-                                        <a href="#" class="btn-sm btn-primary">Add to Cart</a>
-                                        </div>
-                                        </div>
-                                        <div class="card">
-                                                <img src="https://via.placeholder.com/150" height="120px" width="150px" class="card-img-top" alt="...">
-                                                <div class="card-body">
-                                                <h5 class="card-title">Product</h5>
-                                                <p class="card-text">Description of Product.</p>
-                                                <h6 class="card-title">$5</h6>
-                                                <a href="#" class="btn-sm btn-primary">Add to Cart</a>
-                                                </div>
-                                                </div>
-                                        <div class="card">
-                                                <img src="https://via.placeholder.com/150" height="120px" width="150px" class="card-img-top" alt="...">
-                                                <div class="card-body">
-                                                <h5 class="card-title">Product</h5>
-                                                <p class="card-text">Description of Product.</p>
-                                                <h6 class="card-title">$5</h6>
-                                                <a href="#" class="btn-sm btn-primary">Add to Cart</a>
-                                                </div>
-                                                </div>
-                                        <div class="card">
-                                                <img src="https://via.placeholder.com/150" height="120px" width="150px" class="card-img-top" alt="...">
-                                                <div class="card-body">
-                                                <h5 class="card-title">Product</h5>
-                                                <p class="card-text">Description of Product.</p>
-                                                <h6 class="card-title">$5</h6>
-                                                <a href="#" class="btn-sm btn-primary">Add to Cart</a>
-                                                </div>
-                                                </div>
-                                        <div class="card" >
-                                                <img src="https://via.placeholder.com/150" height="120px" width="150px" class="card-img-top" alt="...">
-                                                <div class="card-body">
-                                                <h5 class="card-title">Product</h5>
-                                                <p class="card-text">Description of Product.</p>
-                                                <h6 class="card-title">$5</h6>
-                                                <a href="#" class="btn-sm btn-primary">Add to Cart</a>
-                                                </div>
-                                                </div>
-
-                                                <div class="card">
-                                                        <img src="https://via.placeholder.com/150" height="120px" width="150px" class="card-img-top" alt="...">
-                                                        <div class="card-body">
-                                                        <h5 class="card-title">Product</h5>
-                                                        <p class="card-text">Description of Product.</p>
-                                                        <h6 class="card-title">$5</h6>
-                                                        <a href="#" class="btn-sm btn-primary">Add to Cart</a>
-                                                        </div>
-                                                        </div>
-                                                <div class="card" >
-                                                        <img src="https://via.placeholder.com/150" height="120px" width="150px" class="card-img-top" alt="...">
-                                                        <div class="card-body">
-                                                        <h5 class="card-title">Product</h5>
-                                                        <p class="card-text">Description of Product.</p>
-                                                        <h6 class="card-title">$5</h6>
-                                                        <a href="#" class="btn-sm btn-primary">Add to Cart</a>
-                                                        </div>
-                                                        </div>-->
+                                
                         </div>
 
                         </div>
@@ -152,19 +62,19 @@
                                                   </select></div></div>
                                                   <div class="CashCheckOutNone" id="CashCheckOut">
                                                   <div class="row">
-                                                        <div class="col-sm-4 d-flex flex-row-reverse"><h6 style>Amount Paid</h6></div><div class="col-sm-5
+                                                        <div class="col-sm-4 d-flex flex-row-reverse"><h6>Amount Paid</h6></div><div class="col-sm-5
                                                          d-flex flex-row-reverse"><input id="amountPaid"></input></div></div>
                                                     <div class="row changeDue" >
-                                                        <div class="col-sm-4 d-flex flex-row-reverse"><h6 style>Change Due</h6></div><div class="col-sm-5 d-flex flex-row-reverse"><h6 id="changeDue"></h6></div>
+                                                        <div class="col-sm-4 d-flex flex-row-reverse"><h6 >Change Due</h6></div><div class="col-sm-5 d-flex flex-row-reverse"><h6 id="changeDue"></h6></div>
                                                     </div></div>
                                                   
                                                   <div class="CreditCheckOutNone" id="CreditCheckOut">
 
                                                   <div class="row">
-                                                        <div class="col-sm-4 d-flex flex-row-reverse"><h6 style>Credit Card Number</h6></div><div class="col-sm-5
+                                                        <div class="col-sm-4 d-flex flex-row-reverse"><h6 >Credit Card Number</h6></div><div class="col-sm-5
                                                          d-flex flex-row-reverse"><input id="amountPaid"></input></div></div>
                                                     <div class="row changeDue" >
-                                                        <div class="col-sm-4 d-flex flex-row-reverse"><h6 style>Change Due</h6></div><div class="col-sm-5 d-flex flex-row-reverse"><h6 id="changeDue"></h6></div>
+                                                        <div class="col-sm-4 d-flex flex-row-reverse"><h6 >Change Due</h6></div><div class="col-sm-5 d-flex flex-row-reverse"><h6 id="changeDue"></h6></div>
                                                     </div></div>
                                                   <div class="col-sm-6 d-flex align-items-end flex-column checkoutbtn"><button class="btn btn-primary btn-lg">Checkout</button></div>
                                       </div>
