--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
                         <div class="col-md-5 d-flex flex-row">
                                 <img src="/images/logo.png">
                         </div>
-                        <div class="col-md-7 d-flex flex-row-reverse headericon"><a href="#ProductList"><i
-                                                class="fa fa-shopping-cart fa-2x"></i></a>
+                        <div class="col-md-7 d-flex flex-row-reverse headericon">
+                                <!-- <a href="#ProductList"><i
+                                                class="fa fa-shopping-cart fa-2x"></i></a> -->
 
                         </div>
                 </div>
